# gameoflife

./: .gitignore  CMakeLists.txt  axqueue.c  axstack.c  axvector.c  gameoflife.c  gameoflife.h  main.c  sdl_viewport.c  sdl_viewport.h  square0_png.c  square0_png.h  square1_png.c  square1_png.h  square2_png.c  square2_png.h
.cmake/api/v1/reply/: cache-v2-dc2a0bca1be958418fa9.json  cmakeFiles-v1-22ef6559375c80730c39.json  codemodel-v2-fac2a2f66ce8bdd18b15.json  index-2024-02-01T19-06-15-0883.json  target-gameoflife-Debug-403d1c3d57fac2f113a2.json  toolchains-v1-7a2917d62bc0e196a018.json
